--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "uuid": "^8.3.2"
   },
   "scripts": {
-    "dev": "NODE_ENV=dev ts-node ./src/server.ts"
+    "dev": "NODE_ENV=dev nodemon ./src/server.ts"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
@@ -23,6 +23,7 @@
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^15.0.0",
+    "nodemon": "^2.0.15",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.3"
   }
