--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,3 @@
-
 {
     "env": {
         "browser": true,
@@ -7,17 +6,28 @@
     "extends": [
         "airbnb-base"
     ],
+    "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaVersion": 12,
         "sourceType": "module"
     },
+    "plugins": [
+        "@typescript-eslint"
+    ],
     "rules": {
         "import/extensions": [
             "error",
             {
-                "js": "ignorePackages"
+                "ts": "ignorePackages"
             }
         ],
         "indent": ["error", 4]
+    },
+    "settings": {
+        "import/resolver": {
+          "node": {
+            "extensions": [".js", ".jsx", ".ts", ".tsx"]
+          }
+        }
     }
 }
