--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@types/node": "^16.11.12",
     "@types/pg": "^8.6.1",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
-    "eslint": "^7.32.0",
+    "@typescript-eslint/parser": "^5.6.0",
+    "eslint": "^8.4.1",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.3",
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.3"
